# INFOMAGR

./: README.md
Template/: CMakeLists.txt  README.md
Template/src/: BVH.h  Grid.h  aabb.h  bvh_node.h  bvhnode.h  camera.h  common.h  configuration.hpp  events.cpp  events.hpp  gpu.cu  gpu.h  interval.h  kdtree.h  main.cpp  material.h  objparser.h  parseobj.h  primitive.h  ray.h  sphere.h  triangle.h  vec3.h  world.h
